syntax = "proto3";
package chain4energy.c4echain.cferoutingdistributor;

import "gogoproto/gogo.proto";
import "cferoutingdistributor/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain4energy/c4e-chain/x/cferoutingdistributor/types";

message RoutingDistributor {

  //List contains distributors
  repeated SubDistributor subDistributor = 1;

  //module account to load on start genesis
  repeated string moduleAccounts = 2;
}

message SubDistributor {
  //represent list of module account from which
  repeated string sources = 1;

  //represent destinations
  Destination destination = 2;
}

message Destination {
  string default_share_account = 1;
  repeated Share share = 2;

  //can be null
  int32  burn_share = 3;
}

message Share {
  string name = 1;
  int32 percent = 2;
  account account = 3;
}

message account {
  string address = 1;
  bool isModuleAccount = 2;
}
